# libplex

./: .gitignore  .travis.yml  AUTHORS  COPYING  Makefile.am  README  README.md  autogen.sh  configure.ac  libplex.pc.in
src/lib/: Makefile.am  plex.c  plex.h
